--- a/css/main.css
+++ b/css/main.css
@@ -43,8 +43,8 @@
 
 /* background */
 html { 
-   /*background: url('../londanBlur.png') no-repeat center center fixed; */
-   background-color: #F2F2F2;
+   /*50514F background: url('../londanBlur.png') no-repeat center center fixed; */
+   background-color: #fff;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
@@ -79,11 +79,17 @@ canvas {
 	opacity: 1 !important;
 }
 
+.container {
+	max-width: 100%;
+	margin: 0;
+	width: 100%;
+}
+
 .centered {
 	text-align: left;
 	font-size: 2.5em;
-	left: 25%;
-	right: 25%;
+	left: 15%;
+	right: 15%;
 	position: absolute;
 	opacity: 0;
 	z-index: 4;
@@ -107,221 +113,6 @@ canvas {
 	margin-top: 0;
 }
 
-.before {
-	padding: 10px 25px;
-	margin-top: 300px;
-	color: #db5461;
-	opacity: 1;
-
-	transition: all 350ms ease-out;
-	-webkit-transition: all 350ms ease-out;
-	-moz-transition: all 350ms ease-out;
-}
-
-.before.hide {
-	opacity: 1;
-	-webkit-transform: translate(0, 95px);
-	-moz-transform: translate(0, 95px);
-}
-
-.inside {
-	background: none !important;
-	padding: 10px 25px;
-	color: #db5461;
-
-	transition: all 350ms ease-out;
-	-webkit-transition: all 350ms ease-out;
-	-moz-transition: all 350ms ease-out;
-	-webkit-transform: translate(0, -95px);
-	-moz-transform: translate(0, -95px);
-}
-
-.inside.final {
-	-webkit-transform: translate(0, 0px);
-	-moz-transform: translate(0, 0px);
-}
-
-.rectangle {
-	color: #1d1d1d;
-	padding: 10px 15px;
-	border: 4px solid;
-}
-
-.rectangle a {
-	color: #db5461 !important;
-}
-
-.rectangle a:hover {
-	opacity: 0.7;
-}
-
-.box {
-	overflow: hidden;
-	position: absolute;
-	width: 100%;
-	height: 2.2em;
-	background: #f2f2f2;
-	z-index: 4;
-}
-
-.box div {
-	background: #db5461;
-	position: absolute;
-	transition: all 250ms ease-out;
-	-webkit-transition: all 250ms ease-out;
-	-moz-transition: all 250ms ease-out;
-}
-
-.box .left {
-	left: 0;
-	top: 0;
-	width: 4px;
-	height: 0;
-}
-
-.box .right {
-	right: 0;
-	top: 0;
-	width: 4px;
-	height: 0;
-}
-
-.box .top {
-	left: 0;
-	top: 0;
-	height: 4px;
-	width: 0;
-
-	transition: all 400ms ease-out;
-	-webkit-transition: all 400ms ease-out;
-	-moz-transition: all 400ms ease-out;
-}
-
-.box .bottom {
-	left: 0;
-	top: 96%;
-	height: 4px;
-	width: 0;
-
-	transition: all 400ms ease-out;
-	-webkit-transition: all 400ms ease-out;
-	-moz-transition: all 400ms ease-out;
-}
-
-.final.left {
-	height: 100% !important;
-}
-
-.right.final {
-	height: 100% !important;
-}
-
-.top.final {
-	width: 100% !important;
-}
-
-.bottom.final {
-	width: 100% !important;
-}
-
-.tooltip {
-	position: absolute;
-	right: 0;
-	margin-top: 5em;
-	font-size: 0.45em;
-	color: #db5461;
-	opacity: 0;
-
-	transition: all 250ms ease-out;
-	-webkit-transition: all 250ms ease-out;
-	-moz-transition: all 250ms ease-out;
-}
-
-.beforeList {
-	margin-top: 5em;
-	font-size: 0.45em;
-	color: #db5461;
-	padding: 0;
-	display: flex;
-	justify-content: space-between;
-	position: relative;
-	z-index: 3;
-}
-
-.beforeList div {
-	-webkit-transform: translate(0, -55px);
-	-moz-transform: translate(0, -55px);
-
-	transition: all 250ms ease-out;
-	-webkit-transition: all 250ms ease-out;
-	-moz-transition: all 250ms ease-out;
-}
-
-.beforeList.show div{
-	-webkit-transform: translate(0, 0px);
-	-moz-transform: translate(0, 0px);
-}
-
-.beforeList a {
-	color: #db5461;
-	text-decoration: none;
-	border-bottom: 2px dashed;
-}
-
-#second {
-	transition-delay: 100ms;
-}
-
-#third {
-	transition-delay: 200ms;
-}
-
-#fourth {
-	transition-delay: 300ms;
-}
-
-.landing {
-	height: 100%;
-	background-color: #F2F2F2;
- }
-
-.landing .arrow {
-	bottom: 100px;
-	position: absolute;
-	z-index: 4;
-	width: 100%;
-	text-align: center;
-	color: #db5461;
-	opacity: 0;
-
-	transition: all 250ms ease-out;
-	-webkit-transition: all 250ms ease-out;
-	-moz-transition: all 250ms ease-out;
-}
-
-.landing .arrow span{
-	margin-left: -2px;
-}
-
-.arrow .inner {
-	opacity: 1;
-	display: inline-block;
-	transition: all 200ms ease-out;
-	-webkit-transition: all 200ms ease-out;
-	-moz-transition: all 200ms ease-out;
-}
-
-.arrow .inner:hover {
-	cursor: pointer;
-	margin-bottom: 7px;
-}
-
-.port {
-	height: 100%;
-	background-color: #F2F2F2;
-	z-index: 4;
-	position: relative;
-}
 
 .overlay {
 	height: 100%;
@@ -329,83 +120,12 @@ canvas {
 	background-color: rgba(255, 255, 255, 0.6);
 }
 
-.blurb {
-	text-align: left;
-	font-size: 0.4em;
-	font-weight: 400;
-}
-
-.blurb span {
-	opacity: 0.5;
-}
-
-
 .spacer {
 	height: 250px;
 	position: relative;
 	width: 100%;
 }
 
-.portfolio {
-	text-align: left;
-}
-
-.portfolio .year {
-	font-size: 30px;
-	text-align: center;
-	font-weight: 400;
-	margin-bottom: 70px;
-	margin-top: 70px;
-}
-
-.portfolio .year::after {
-	content: '';
-	clear: both;
-}
-
-.proj {
-	margin-bottom: 40px;
-	font-size: 1em;
-	transition: all 250ms ease-out;
-	font-weight: 400;
-	padding: 0px 20px 10px 20px;
-	border: 2px solid;
-}
-
-.proj:hover {
-	color: #DB5461;
-	border-color: #DB5461 !important;
-	cursor: pointer;
-}
-
-.proj .title {
-	font-weight: 500;
-	float: left;
-}
-
-.proj .where {
-	float: right;
-	font-size: 0.4em;
-	margin-top: -2px;
-	margin-right: -22px;
-	border: 2px solid;
-	padding: 8px;
-}
-
-.proj .where::after {
-	content: '';
-	right: 0;
-	height: 30px;
-	width: 1.8px;
-	opacity: 0;
-	position: absolute;
-	background-color: #1d1d1d;
-}
-
-.proj .desc {
-	clear: both;
-	font-size: 0.4em;
-}
 
 .top {
 	position: fixed;
@@ -503,14 +223,6 @@ canvas {
 	transition-delay: 950ms !important;
 	-webkit-transform: translate(-10px) !important;
 	-moz-transform: translate(-10px) !important;
-	/*z-index: 5;
-	position: absolute;
-	bottom: 10%;
-	left: 50%;
-	transform: translate(-50%, 0);
-	-webkit-transform: translate(-50%, 0);
-	-moz-transform: translate(-50%, 0);
-	-o-transform: translate(-50%, 0); */
 }
 
 .nav .right > a,
@@ -616,129 +328,3 @@ canvas {
 	}
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* transition about page */
-
-.container {
-	max-width: 100%;
-	position: relative;
-	height: 60px;
-}
-
-.container > ul {
-	margin: 0;
-	padding: 0;
-	padding-top: 2px;
-	position: relative;
-	list-style: none;
-
-}
-
-.container li {
-	position: relative;
-	pointer-events: none;
-	opacity: 0;
-	z-index: 999;
-
-}
-
-.container .current {
-	opacity: 1;
-	pointer-events: auto;
-	z-index: 1000;
-}
-
-.itemwrap {
-	position: relative;
-}
-
-.itemwrap li {
-
-	position: relative;
-	visibility: hidden;
-	height: 0;
-
-}
-
-.itemwrap li > span > em {
-	font-weight: 100;
-	font-size: 0.4em;
-	color: #FF8000;
-}
-
-.itemwrap li.current,
-.no-js .itemwrap li {
-	visibility: visible;
-	height: 0;
-	-webkit-transition: none;
-	transition: none;
-}
-
-.itemwrap li > span {
-	display: block;
-	-webkit-transition: -webkit-transform 0.4s;
-	transition: transform 0.4s;
-	-webkit-transform: translateY(-100%);
-	transform: translateY(-100%);
-}
-
-.itemwrap li.current > span,
-.no-js .itemwrap li > span {
-	-webkit-transition: none;
-	transition: none;
-	-webkit-transform: translateY(0);
-	transform: translateY(0);
-}
-
-.show-next > span {
-	opacity: 1;
-	z-index: 1000;
-	-webkit-animation: moveUpFromDown 1s both;
-	animation: moveUpFromDown 1s both;
-}
-
-.move-out > span {
-	
-	-webkit-animation: moveOut 0.7s both;
-	animation: moveOut 0.7s both;
-}
-
-@-webkit-keyframes moveUpFromDown {
-	from { -webkit-transform: translateY(100%); }
-	to { -webkit-transform: translateY(0); }
-}
-
-@keyframes moveUpFromDown {
-	from { -webkit-transform: translateY(100%); transform: translateY(100%); }
-	to { -webkit-transform: translateY(0); transform: translateY(0); }
-}
-
-@-webkit-keyframes moveOut {
-	from { -webkit-transform: translateY(0); }
-	to { -webkit-transform: translateY(-110%); }
-}
-
-@keyframes moveOut {
-	from { -webkit-transform: translateY(0); transform: translateY(0); }
-	to { -webkit-transform: translateY(-110%); transform: translateY(-110%); }
-}
