--- a/css/final.css
+++ b/css/final.css
@@ -59,13 +59,13 @@ body {
 
 .big {
 	font-size: 2.4em;
-	opacity: 0.50;
+	opacity: 0.70;
 }
 
 .sub-title {
 	margin-top: -0.4em;
 	font-size: 1em;
-	opacity: 0.40;
+	opacity: 0.60;
 }
 
 .small-line {
@@ -166,7 +166,9 @@ body {
 	width: 100%;
 }
 
-.proj:hover img {
+.proj:hover img,
+.proj:hover .title,
+.proj:hover .desc {
 	opacity: 1;
 }
 
@@ -174,10 +176,12 @@ body {
 	font-size: 1.7em;
 	z-index: 2;
 	position: relative;
+	opacity: 0.75;
 
 }
 
 .proj .desc {
+	opacity: 0.75;
 	font-size: 0.5em;
 	font-weight: 400;
 	margin-top: 0.4em;
@@ -191,7 +195,7 @@ body {
 
 .proj img {
 	opacity: 0;
-	max-width: 100%;
+	width: 100%;
 	position: absolute;
 	top: 0;
 	left: 0;
@@ -214,6 +218,28 @@ body {
 /* BACKGROUND IMAGE IDs */
 #hackfsu {
 	top: -25px;
+}
+
+#technole {
+	top: -2em;
+}
+
+#domi {
+	width: 160%;
+	top: -1.1em;
+}
+
+#hippo {
+	top: -7.8em;
+}
+
+#previous-site {
+	width: 120%;
+}
+
+#kanye {
+	width: 120%;
+	top: -3em;
 }
 
 
