add link to previous site

--- a/css/final.css
+++ b/css/final.css
@@ -136,6 +136,11 @@ body {
 	background: #605D67;
 }
 
+.proj a {
+	text-decoration: none;
+	color: #fff;
+}
+
 .proj {
 	position: relative;
 	text-align: center;
